--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,13 +10,13 @@ services:
       - PUID=1000
       - PGID=1000
       - TZ=Europe/Madrid
-      - SERVERURL=1.1.1.1 #ponga aquí la ip del servidor host de la vpn
+      - SERVERURL=1.1.1.1 #add here the ip of the host server of your vpn
       - SERVERPORT=51820
-      - PEERS=4 #puede reducir o aumentar la cantidad de licenncias, se puede acceder mediante codigo QR
+      - PEERS=4 #you can reduce or increase the number of licenses, it can be accessed by QR code
       - PEERDNS=auto #optional
       - INTERNAL_SUBNET=10.13.13.0 #optional
     volumes:
-      - ./wireguard/config:/config #el archivo config contienne los codigo QR
+      - ./wireguard/config:/config #the config file contains the QR codes
       - /lib/modules:/lib/modules
     ports:
       - 51820:51820/udp
